Using templates with inheritance

--- a/BasicProject/HelloDjangoApp/templates/HelloDjangoApp/index.html
+++ b/BasicProject/HelloDjangoApp/templates/HelloDjangoApp/index.html
@@ -1,8 +1,4 @@
-<html>
-    <head>
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        <strong>{{ message }}</strong>{{ content }}
-    </body>
-</html>
+{% extends "HelloDjangoApp/layout.html" %}
+{% block content %}
+<span class="message">{{ message }}</span>{{ content }}
+{% endblock %}
